<resources>
    <string name="app_name">MTA</string>
    <string name="fare_per_ride">MTA Fare: $%s Per Ride.</string>
    <string name="calculate">Calculate</string>
    <string name="result">Result</string>
    <string name="enter_rides_desired">Enter Rides Desired</string>
    <string name="enter_current_mta_balance">Enter Current MTA Balance</string>
    <string name="type_of_mta_card">type of MTA card</string>
    <string-array name="description">
        <item>purchasing new cards is an additional $1.00</item>
        <item>purchases of $5.50 or more automatically receive an additional 5% credit on their cards</item>
        <item>This card is protected from theft</item>
        <item>This card is protected from theft</item>
    </string-array>
    <string name="price_of_card">price of card</string>
    <string name="new_card">New Card</string>
    <string name="enoughCash">You already have enough balance!</string>
    <string name="click_to_view_mta_logs">View Logs</string>
    <string name="click_to_delete_mta_logs">Delete HISTORY</string>
    <string name="click_to_view_table">View Table</string>
    <string name="click_to_view_status_info">View Status</string>
    <string name="table_balance">Card Balance: $%s</string>
    <string name="table_cardtype">Fare Type: %s</string>
    <string name="table_isnewcard">New Card: %s</string>
    <string name="table_column_heading_1">NEEDED $</string>
    <string name="table_column_heading_2">RIDES</string>
    <string name="table_column_heading_3">BONUS $</string>
    <string name="table_column_heading_4">TOTAL $</string>
    <string name="logslist_empty">You do not have any history to display</string>
    <string name="log_order">#%s</string>
    <string name="log_time">%s</string>
    <string name="log_faretype">%s</string>
    <string name="log_isNewCard">New Card = %s</string>
    <string name="log_rides">Rides = %s</string>
    <string name="log_balance">Balance = $%s</string>
    <string name="log_cost">Cost = $%s</string>
    <string name="phone_contact_button">Phone Contact</string>
    <string name="regular_mail_contact_button">Regular Mail Contact</string>
    <string name="email_contact_button">E-mail Contact</string>
    <string name="service_status_subway_button">Subway</string>
    <string name="service_status_rail_button">Rail</string>
    <string name="service_status_bus_button">Bus</string>
    <string name="service_status_bridges_and_tunnels_button">Bridges &amp; Tunnels</string>
    <string name="service_status_last_update_time">Service Status %s</string>
    <string name="service_status_no_internet_connection"><font fgcolor='#FF3B30'>NO INTERNET CONNECTION</font></string>
    <string name="service_status_loading">LOADING....</string>
    <string name="service_status_rail_fragment_LIRR">Long Island Rail Road</string>
    <string name="service_status_rail_fragment_MetroNorth">Metro-North Railroad</string>
    <string name="options_drawer_open">OPENED DRAWER</string>
    <string name="options_drawer_close">CLOSED DRAWER</string>
    <string name="options_drawer_action_bar_title">PLACEHOLDER TITLE</string>
    <string name="main_nav_home">Home</string>
    <string name="main_nav_mta_prices">Prices</string>
    <string name="main_nav_mta_service_status">Service Status</string>
    <string name="main_nav_mta_time_subway">Subway Time</string>
    <string name="main_nav_mta_time_bus">Bus Time</string>
    <string name="main_nav_mta_maps">MTA Maps</string>
    <string name="main_nav_mta_contacts">Contact MTA"</string>
    <string name="main_nav_mta_links">Useful MTA Links</string>
    <string name="main_nav_mta_logs">Your History</string>
    <string name="main_nav_settings">Settings</string>
    <string name="main_nav_send_feedback">Send feedback</string>
    <string name="contacts_email"><b>Email the MTA:</b> <i>http://mta-nyc.custhelp.com/app/ask</i></string>
    <string-array name="contacts_phone_numbers">
        <item><b>Lost or Stolen 30 Day Unlimited or 7-Day Express Bus Plus MetroCard</b>\nPhone: 511 or 718 330–1234\nTo file for a refund, follow the prompts until you get to the Balance Protection Program (Must have purchased the 30-Day Unlimited or 7-Day Express Bus Plus card by a credit or debit/ ATM card from a MetroCard Vending Machine in order to qualify for the Balance Protection Program.)</item>
        <item><b>New York City Subways and Buses</b>\nPhone: 511\nFor 511 say "Subways and Buses" and listen to prompts to reach desired directory</item>
        <item><b>New York City Paratransit Services</b>\nPhone: 877–337–2017\nOutside Region Phone: 718–393–4999\nListen prompts for desired directory</item>
        <item><b>Long Island Rail Road</b>\nPhone: 511 Or 718–217–LIRR (718–217–5477)\nFor 511 say "Long Island Rail Road" and listen to prompts to reach desired directory</item>
        <item><b>Metro-North Railroad</b>\nPhone: 511\nFrom Connecticut: 877–690–5114\nFor 511 say "Metro-North Railroad" and listen to prompts to reach desired directory</item>
        <item><b>Bridges and Tunnels</b>\nPhone: 511\nFor 511 say "Bridges and Tunnels" and listen to prompts to reach desired directory</item>
        <item><b>MTA and Other General Numbers</b>\nPolice Emergencies: 911\nMTA Corporate Offices: 212–878–7000\nPublic Meeting Hotline: 212–878–7199\nNew York Transit Museum: 718–694–1600\nAnti–Terrorism Hotline: 888–692–7233 (888–NYC SAFE)\nMTA Police non–emergencies: 212–878–1001</item>
        <item><b>Out of region callers and International Callers</b>\nOut of region: 877–690–5116\nInternational: 212–878–7000</item>
        <item><b>For Complete List of MTA Contact Phone Numbers Please visit:</b> http://web.mta.info/mta/phone.htm</item>
    </string-array>
    <string-array name="contacts_mail">
        <item><b>MTA New York City Transit</b>\nPresident: Andy Byford\n2 Broadway New York, NY, 10004</item>
        <item><b>MTA Long Island Rail Road</b>\nPresident: Phillip Eng\nJamaica Station Jamaica, NY, 11435</item>
        <item><b>MTA Metro-North Railroad</b>\nPresident Catherine Rinaldi\n420 Lexington Avenue, New York, NY 10170</item>
        <item><b>MTA Bridges and Tunnels</b>\nPresident: Cedrick T. Fulton\nRandalls Island, New York, NY 10035</item>
        <item><b>MTA Capital Construction</b>\nPresident: Janno Lieber\n2 Broadway New York, NY, 10004</item>
        <item><b>MTA Bus Company</b>\nPresident: Darryl C. Irick\n2 Broadway New York, NY, 10004</item>
        <item><b>MTA Business Service Center</b>\n333 W. 34th Street\n9th Floor\nNew York, NY, 10001</item>
    </string-array>
    <string-array name="links_mta_links">
        <item>MTA Website: new.mta.info/</item>
        <item>Train Estimated Time of Arrival to a station: subwaytime.mta.info/</item>
        <item>Bus Location: bustime.mta.info/</item>
        <item>Planned Service Changes: new.mta.info/planned-service-changes/</item>
        <item>MTA Maps: new.mta.info/maps/</item>
        <item>Individual Subway Lines Map: web.mta.info/nyct/service/index.html</item>
        <item>Fares and MetroCards:\nhttps://new.mta.info/fares-and-tolls</item>
        <item>Lost or Stolen Unlimited 30-Day or 7-Day Express Bus Plus MTA card:\nhttps://new.mta.info/fares/subway-and-bus/balance-protection-program</item>
        <item>Lost and Found: https://new.mta.info/lost-and-found</item>
        <item>eFIX: File an MTA card claim online: efixmetrocard.mtanyct.info/</item>
        <item>MTA eTix mobile ticketing app, purchase and use Long Island Rail Road and Metro-North Railroad tickets directly on your smartphone or mobile device:\nhttps://new.mta.info/mta-etix </item>
        <item>Report an Incident of Sexual Misconduct:\nmta-nyc.custhelp.com/app/ask_sh</item>
        <item>MTA Employment Opportunities:\nhttps://new.mta.info/careers</item>
        <item>General MTA Info: mta.info/about/</item>
        <item>About MTA: https://new.mta.info/about-us</item>
        <item>MTA Tourism Information Page:\nmta.info/metrocard/tourism/index.html</item>
        <item>Customer Self-Service: https://new.mta.info/customer-self-service/</item>
        <item>Doing Business With the MTA:\nhttps://new.mta.info/doing-business-with-us</item>
        <item>MTA Transparency: https://new.mta.info/transparency</item>
        <item>Frequently Asked Questions:\nhttps://new.mta.info/FAQs</item>
        <item>MTA Developer Resources:\nweb.mta.info/developers/</item>
        <item>Contact MTA: https://new.mta.info/contact-us</item>
        <item>MTA Customer Safety Information: https://new.mta.info/safety-and-security</item>
    </string-array>
    <string name="map_subway_download"><u>Click Here to Download Higher Quality Subway Map (PDF)</u></string>
    <string-array name="map_subway_stops">
        <item><b>All 1 Train Stops:</b> <i>http://web.mta.info/nyct/service/oneline.htm</i></item>
        <item><b>All 2 Train Stops:</b> <i>http://web.mta.info/nyct/service/twoline.htm</i></item>
        <item><b>All 3 Train Stops:</b> <i>http://web.mta.info/nyct/service/threelin.htm</i></item>
        <item><b>All 4 Train Stops:</b> <i>http://web.mta.info/nyct/service/fourline.htm</i></item>
        <item><b>All 5 Train Stops:</b> <i>http://web.mta.info/nyct/service/fiveline.htm</i></item>
        <item><b>All 6 Train Stops:</b> <i>http://web.mta.info/nyct/service/sixline.htm</i></item>
        <item><b>All 6 Express Train Stops:</b> <i>http://web.mta.info/nyct/service/6d.htm</i></item>
        <item><b>All 7 Train Stops:</b> <i>http://web.mta.info/nyct/service/sevenlin.htm</i></item>
        <item><b>All 7 Express Train Stops:</b> <i>http://web.mta.info/nyct/service/7d.htm</i></item>
        <item><b>All A Train Stops:</b> <i>http://web.mta.info/nyct/service/aline.htm</i></item>
        <item><b>All B Train Stops:</b> <i>http://web.mta.info/nyct/service/bline.htm</i></item>
        <item><b>All C Train Stops:</b> <i>http://web.mta.info/nyct/service/cline.htm</i></item>
        <item><b>All D Train Stops:</b> <i>http://web.mta.info/nyct/service/dline.htm</i></item>
        <item><b>All E Train Stops:</b> <i>http://web.mta.info/nyct/service/eline.htm</i></item>
        <item><b>All F Train Stops:</b> <i>http://web.mta.info/nyct/service/fline.htm</i></item>
        <item><b>All G Train Stops:</b> <i>http://web.mta.info/nyct/service/gline.htm</i></item>
        <item><b>All J Train Stops:</b> <i>http://web.mta.info/nyct/service/jline.htm</i></item>
        <item><b>All L Train Stops:</b> <i>http://web.mta.info/nyct/service/lline.htm</i></item>
        <item><b>All M Train Stops:</b> <i>http://web.mta.info/nyct/service/mline.htm</i></item>
        <item><b>All N Train Stops:</b> <i>http://web.mta.info/nyct/service/nline.htm</i></item>
        <item><b>All Q Train Stops:</b> <i>http://web.mta.info/nyct/service/qline.htm</i></item>
        <item><b>All R Train Stops:</b> <i>http://web.mta.info/nyct/service/rline.htm</i></item>
        <item><b>All S Train Stops:</b> <i>http://web.mta.info/nyct/service/sline.htm</i></item>
        <item><b>All W Train Stops:</b> <i>http://web.mta.info/nyct/service/wline.htm</i></item>
        <item><b>All Z Train Stops:</b> <i>http://web.mta.info/nyct/service/zline.htm</i></item>
    </string-array>
    <string name="map_rail_LIRR_download"><u>Click Here to Download Higher Quality Long Island Rail Road Map (PDF)</u></string>
    <string name="map_rail_Metro_North_download"><u>Click Here to View Higher Quality Metro North Rail Road Map</u></string>
    <string name="map_bus_bronx_download"><u>Click Here to Download Higher Quality Bronx Bus Map (PDF)</u></string>
    <string name="map_bus_brooklyn_download"><u>Click Here to Download Higher Quality Brooklyn Bus Map (PDF)</u></string>
    <string name="map_bus_manhattan_download"><u>Click Here to Download Higher Quality Manhattan Bus Map (PDF)</u></string>
    <string name="map_bus_queens_download"><u>Click Here to Download Higher Quality Queens Bus Map (PDF)</u></string>
</resources>