<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Home icon requires this in [app -> build.gradle] :
         vectorDrawables.useSupportLibrary = true

         Current Dimensions for icons :
         mdpi    = 24 x 24
         hdpi    = 36 x 36
         xhdpi   = 48 x 48
         xxhdpi  = 72 x 72
         xxxhdpi = 96 x 96
     -->

    <group android:id = "@+id/group1" android:checkableBehavior="none">
        <item android:id="@+id/nav_home"
            android:title="@string/main_nav_home"
            android:icon="@drawable/ic_home_black_24" />

        <item android:id="@+id/nav_mta_prices"
            android:title="@string/main_nav_mta_prices"
            android:icon="@drawable/ic_attach_money_black_24dp" />

        <item android:id="@+id/nav_mta_service_status"
            android:title="@string/main_nav_mta_service_status"
            android:icon="@drawable/baseline_network_check_black_24dp" />

        <item android:id="@+id/nav_mta_time_subway"
            android:title="@string/main_nav_mta_time_subway"
            android:icon="@drawable/ic_mta_time_24dp" />

        <item android:id="@+id/nav_mta_time_bus"
            android:title="@string/main_nav_mta_time_bus"
            android:icon="@drawable/ic_mta_time_24dp" />

        <item
            android:id="@+id/nav_mta_maps"
            android:title="@string/main_nav_mta_maps"
            android:icon="@drawable/ic_maps_24dp"/>

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/baseline_contact_phone_black_24dp"
            android:title="@string/main_nav_mta_contacts" />
        <item android:id="@+id/nav_mta_links"
            android:title="@string/main_nav_mta_links"
            android:icon="@drawable/ic_link_black_24dp" />

        <item android:id="@+id/nav_mta_logs"
            android:title="@string/main_nav_mta_logs"
            android:icon="@drawable/ic_history_black_24" />
    </group>

    <group android:id = "@+id/group2" android:checkableBehavior="none">
        <!--<item android:id="@+id/nav_settings"-->
            <!--android:title="@string/main_nav_settings"-->
            <!--android:icon="@drawable/ic_settings_black_24dp" />-->

        <item android:id="@+id/nav_send_feedback"
            android:title="@string/main_nav_send_feedback"
            android:icon="@drawable/ic_feedback_black_24dp" />
    </group>

</menu>

<!-- NOTE: Can create divider by giving each section a new group (even if single) e.g.
     <group android:id="@+id/g1" android:checkableBehavior="single" >
        <item ... />
     </group>

     <group android:id="@+id/g2" android:checkableBehavior="single" >
        <item ... />
     </group>
-->