<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/optionsDrawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TabLayout
            android:id="@+id/service_tablayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:tabMode="scrollable"
            app:tabIndicatorColor="#0055aa"
            app:tabTextAppearance="@style/Custom_TabLayoutText">

            <android.support.design.widget.TabItem
                android:id="@+id/service_subway"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_mta_train_24dp"
                android:text="@string/service_status_subway_button" />

            <android.support.design.widget.TabItem
                android:id="@+id/service_rail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_mta_rail_24dp"
                android:text="@string/service_status_rail_button" />

            <android.support.design.widget.TabItem
                android:id="@+id/service_bus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_mta_bus_24dp"
                android:text="@string/service_status_bus_button" />

            <android.support.design.widget.TabItem
                android:id="@+id/service_bridge_and_tunnels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_mta_bridge_24dp"
                android:text="@string/service_status_bridges_and_tunnels_button" />

        </android.support.design.widget.TabLayout>

        <RelativeLayout
            android:id="@+id/service_fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </RelativeLayout>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/main_navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:theme="@style/Custom_NavigationViewDrawerStyle"
        app:menu="@menu/main_navigation" />

</android.support.v4.widget.DrawerLayout>