<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <TextView
        android:id="@+id/typeofCardTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/descriptionTextView"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/descriptionTextView"
        android:layout_marginTop="49dp"
        android:text="@string/type_of_mta_card"
        android:textAlignment="viewStart"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="start" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/priceofCardTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/priceofCardTextView"
        android:layout_below="@+id/priceofCardTextView"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:text="@string/description"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:gravity="start" />

    <TextView
        android:id="@+id/priceofCardTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/typeofCardTextView"
        android:layout_alignBottom="@+id/typeofCardTextView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/price_of_card"
        android:textAlignment="viewEnd"
        android:textSize="23sp"
        android:textStyle="bold"
        android:gravity="end" />
</RelativeLayout>