<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/optionsDrawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none"
        android:layout_weight="1"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:background="#FFFFFF"
            android:id="@+id/tabelayout_prices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/table_balanceTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/table_balance"
                android:textSize="@dimen/textSize_large" />

            <TextView
                android:id="@+id/table_cardtypeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/table_cardtype"
                android:textSize="@dimen/textSize_large" />

            <TextView
                android:id="@+id/table_isnewcardTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/table_isnewcard"
                android:textSize="@dimen/textSize_large" />
        </TableLayout>

    </ScrollView>

    <android.support.design.widget.NavigationView
        android:id="@+id/main_navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:theme="@style/Custom_NavigationViewDrawerStyle"
        app:menu="@menu/main_navigation" />

</android.support.v4.widget.DrawerLayout>