<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/optionsDrawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TabLayout
            android:id="@+id/contact_tablayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:tabMode="scrollable"
            app:tabIndicatorColor="#0055aa"
            app:tabTextAppearance="@style/Custom_TabLayoutText">

            <android.support.design.widget.TabItem
                android:id="@+id/phone_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/baseline_call_black_24dp"
                android:text="@string/phone_contact_button" />

            <android.support.design.widget.TabItem
                android:id="@+id/e_mail_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/baseline_alternate_email_black_24dp"
                android:text="@string/email_contact_button" />

            <android.support.design.widget.TabItem
                android:id="@+id/regular_mail_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/baseline_mail_outline_black_24dp"
                android:text="@string/regular_mail_contact_button" />


        </android.support.design.widget.TabLayout>

        <RelativeLayout
            android:id="@+id/contact_fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </RelativeLayout>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/main_navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:theme="@style/Custom_NavigationViewDrawerStyle"
        app:menu="@menu/main_navigation" />

</android.support.v4.widget.DrawerLayout>