<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/optionsDrawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_weight="0.2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="8dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/mtaFareTextView"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center_vertical"
                android:text="@string/fare_per_ride"
                android:textAllCaps="true"
                android:textColor="#1c1c1c"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:orientation="horizontal">

            <!-- FIXME: Padding messes up alignment -->
            <Spinner
                android:id="@+id/cardTypeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/typeOfCard" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/currentBalanceNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="numberDecimal"
                android:textColor="#000000"
                android:textStyle="bold|italic"
                android:hint="@string/enter_current_mta_balance"
                android:textSize="@dimen/textSize_X_large" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/ridesDesiredNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/enter_rides_desired"
                android:inputType="numberSigned"
                android:textColor="#000000"
                android:textSize="@dimen/textSize_XX_large"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/calculateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/calculate"
                android:textSize="@dimen/textSize_large" />

            <CheckBox
                android:id="@+id/newcardCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/calculateButton"
                android:layout_alignBottom="@id/calculateButton"
                android:layout_toRightOf="@id/calculateButton"
                android:layout_toEndOf="@id/calculateButton"
                android:textAllCaps="true"
                android:textColor="#1c1c1c"
                android:textStyle="bold"
                android:text="@string/new_card"
                android:textSize="@dimen/textSize_medium" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/resultTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:text="@string/result"
                android:textSize="@dimen/textSize_XXX_large" />
        </LinearLayout>

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="0.2"-->
            <!--android:orientation="horizontal">-->

            <!--<Button-->
                <!--android:id="@+id/showMtaLogs"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="0.25"-->
                <!--android:text="@string/click_to_view_mta_logs"-->
                <!--android:textSize="@dimen/textSize_large" />-->

            <!--<Button-->
                <!--android:id="@+id/deleteMtaLogs"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="0.25"-->
                <!--android:text="@string/click_to_delete_mta_logs"-->
                <!--android:textSize="@dimen/textSize_large" />-->

            <!--<Button-->
                <!--android:id="@+id/tableButton"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="0.25"-->
                <!--android:text="@string/click_to_view_table"-->
                <!--android:textSize="@dimen/textSize_large" />-->

            <!--<Button-->
                <!--android:id="@+id/statusInfoButton"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="0.25"-->
                <!--android:text="@string/click_to_view_status_info"-->
                <!--android:textSize="@dimen/textSize_large" />-->
        <!--</LinearLayout>-->
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/main_navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:theme="@style/Custom_NavigationViewDrawerStyle"
        app:menu="@menu/main_navigation" />

</android.support.v4.widget.DrawerLayout>